# qtproject-temperature-converter

./: CMakeLists.txt  README.md  main.cpp  mainwindow.ui  ok  temperatureconverter.cpp  temperatureconverter.h  unitconverter.cpp  unitconverter.h  utilsfunctions.h
src/: mainwindow.ui  temperatureconverter.cpp  temperatureconverter.h  utilsfunctions.cpp  utilsfunctions.h
